# XMailServer

./: CMakeLists.txt  README.md
doc/: table_design.md
include/: CDBUtil.h  CommTypes.h  ConfigUtil.h  POP3Utils.h  SMAILUtils.h  SMTPSvr.h  SmtpConfig.h  SysDep.h  SysInclude.h  SysMacros.h  SysTypesUnix.h  SysTypesWin.h  SysUtil.h  UserUtils.h  UsrAuth.h  UsrMailList.h  UsrUtils.h  XMailConfig.h  XMailStruct.h  dt_const_value.h  dt_const_win_value.h  logutil.h
src/: AliasDomain.cpp  Array.cpp  BuffSock.cpp  CDBUtil.cpp  CTRLSvr.cpp  DNS.cpp  DNSCache.cpp  Errors.cpp  ExtAliases.cpp  FINGSvr.cpp  Filter.cpp  Hash.cpp  LMAILSvr.cpp  MailDomains.cpp  MailSvr.cpp  MainLinux.cpp  MainWin.cpp  MessQueue.cpp  MiscUtils.cpp  POP3GwLink.cpp  POP3Svr.cpp  POP3Utils.cpp  PSYNCSvr.cpp  QueueUtils.cpp  ResLocks.cpp  SList.cpp  SMAILSvr.cpp  SMAILUtils.cpp  SMTPSvr.cpp  SMTPUtils.cpp  SSLBind.cpp  SSLConfig.cpp  SSLMisc.cpp  ShBlocks.cpp  SmtpConfig.cpp  StrUtils.cpp  SvrUtils.cpp  SysDepUnix.cpp  SysDepWin.cpp  SysOsEventfd_pipe.cpp  (+8 more)
